--- a/client/style.css
+++ b/client/style.css
@@ -155,6 +155,14 @@ aside {
     /* Naranja oscuro */
 }
 
+h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2em;
+    font-size: 40px;
+}
+
 /* Estilos para el formulario */
 section {
     float: left;
